tests/golden/phase4a/compile-pass/closure_capture_mut_fused.rua
fn main() -> i64 {
    let mut total = 0;
    (0..4)
        .map(|value| {
            total = total + value;
            value
        })
        .count();
    total
}
