tests/golden/phase4a/compile-fail/closure_mut_capture_invalid.rua
fn main() {
    let mut total = 0;
    let update = |value| {
        total = total + value;
    };
    update(1);
}
